--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "hebräisch",
   "cal_balinese": "Balinesen",
   "cal_creationist": "Kreationist",
-  "cal_gregorian_explanation": "Sonnenkalender, 12 Monate, 365-366 Tage, eingeführt von Papst Gregor XIII. im Jahr 1582.",
+  "cal_gregorian_explanation": "Sonnenkalender, 12 Monate, 365-366 Tage, eingeführt im Jahr 1582.",
   "cal_islamic_explanation": "Der Mondkalender, 12 Monate, 354-355 Tage, beginnt mit der Auswanderung Mohammeds nach Medina (622 n. Chr.).",
   "cal_chinese_explanation": "Der Lunisolarkalender kombiniert Mondmonate, Sonnenjahr und den 12-jährigen Tierkreiszyklus. Er wird für traditionelle ostasiatische Feste verwendet.",
   "cal_persian_explanation": "Der Sonnenkalender, 365-366 Tage, beginnt mit der Frühlingstagundnachtgleiche (Nowruz).",
