--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "hébreu",
   "cal_balinese": "Balinais",
   "cal_creationist": "créationniste",
-  "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit par le pape Grégoire XIII en 1582.",
+  "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit en 1582.",
   "cal_islamic_explanation": "Calendrier lunaire, 12 mois, 354-355 jours, commence avec la migration de Mahomet à Médine (622 CE).",
   "cal_chinese_explanation": "Calendrier luni-solaire, combinant les mois lunaires, l'année solaire et le cycle zodiacal de 12 ans. Utilisé pour les fêtes traditionnelles d'Asie de l'Est.",
   "cal_persian_explanation": "Le calendrier solaire, de 365 à 366 jours, commence à l'équinoxe de printemps (Nowruz).",
