--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "ebraico",
   "cal_balinese": "Balinese",
   "cal_creationist": "creazionista",
-  "cal_gregorian_explanation": "Calendario solare, 12 mesi, 365-366 giorni, introdotto da Papa Gregorio XIII nel 1582.",
+  "cal_gregorian_explanation": "Calendario solare, 12 mesi, 365-366 giorni, introdotto nel 1582.",
   "cal_islamic_explanation": "Il calendario lunare, 12 mesi, 354-355 giorni, inizia con la migrazione di Maometto a Medina (622 d.C.).",
   "cal_chinese_explanation": "Calendario lunisolare, che combina i mesi lunari, l'anno solare e il ciclo zodiacale di 12 anni degli animali. Utilizzato per le feste tradizionali dell'Asia orientale.",
   "cal_persian_explanation": "Il calendario solare, di 365-366 giorni, inizia con l'equinozio di primavera (Nowruz).",
