--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "ヘブライ語",
   "cal_balinese": "バリ人",
   "cal_creationist": "創造論者",
-  "cal_gregorian_explanation": "太陽暦、12 か月、365 ～ 366 日、1582 年に教皇グレゴリウス 13 世によって導入されました。",
+  "cal_gregorian_explanation": "太陽暦、12 か月、365 ～ 366 日、1582 年に導入されました。",
   "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
   "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
   "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
