--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "Hebreeuws",
   "cal_balinese": "Balinees",
   "cal_creationist": "Creationist",
-  "cal_gregorian_explanation": "De zonnekalender, met 12 maanden en 365-366 dagen, werd in 1582 ingevoerd door paus Gregorius XIII.",
+  "cal_gregorian_explanation": "De zonnekalender, met 12 maanden en 365-366 dagen, werd ingevoerd in 1582.",
   "cal_islamic_explanation": "De maankalender, met 12 maanden en 354-355 dagen, begint met de migratie van Mohammed naar Medina (622 n.Chr.).",
   "cal_chinese_explanation": "De lunisolaire kalender combineert de maanmaanden, het zonnejaar en de 12-jarige cyclus van de dierenriem. Deze kalender wordt gebruikt voor traditionele Oost-Aziatische festivals.",
   "cal_persian_explanation": "De zonnekalender, die 365-366 dagen duurt, begint bij de lente-equinox (Nowruz).",
