--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "hebrajski",
   "cal_balinese": "Balijski",
   "cal_creationist": "Kreacjonista",
-  "cal_gregorian_explanation": "Kalendarz słoneczny, 12 miesięcy, 365-366 dni, wprowadzony przez papieża Grzegorza XIII w 1582 roku.",
+  "cal_gregorian_explanation": "Kalendarz słoneczny, 12 miesięcy, 365-366 dni, wprowadzony w 1582 roku.",
   "cal_islamic_explanation": "Kalendarz księżycowy, składający się z 12 miesięcy i 354–355 dni, rozpoczyna się wraz z emigracją Mahometa do Medyny (622 r. n.e.).",
   "cal_chinese_explanation": "Kalendarz księżycowo-słoneczny, łączący miesiące księżycowe, rok słoneczny i 12-letni cykl zodiakalny zwierząt. Używany podczas tradycyjnych świąt wschodnioazjatyckich.",
   "cal_persian_explanation": "Kalendarz słoneczny, liczący 365–366 dni, rozpoczyna się od równonocy wiosennej (Nowruz).",
