--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "иврит",
   "cal_balinese": "балийский",
   "cal_creationist": "креационист",
-  "cal_gregorian_explanation": "Солнечный календарь, 12 месяцев, 365-366 дней, введенный папой Григорием XIII в 1582 году.",
+  "cal_gregorian_explanation": "Солнечный календарь, 12 месяцев, 365-366 дней, введен в 1582 году.",
   "cal_islamic_explanation": "Лунный календарь, состоящий из 12 месяцев и 354-355 дней, начинается с переселения Мухаммеда в Медину (622 г. н.э.).",
   "cal_chinese_explanation": "Лунно-солнечный календарь, сочетающий лунные месяцы, солнечный год и 12-летний цикл зодиакальных животных. Используется для традиционных восточноазиатских фестивалей.",
   "cal_persian_explanation": "Солнечный календарь, состоящий из 365-366 дней, начинается с весеннего равноденствия (Новруза).",
