--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "Hebreiska",
   "cal_balinese": "balinesisk",
   "cal_creationist": "Kreationist",
-  "cal_gregorian_explanation": "Solkalender, 12 månader, 365-366 dagar, introducerad av påven Gregorius XIII år 1582.",
+  "cal_gregorian_explanation": "Solkalender, 12 månader, 365–366 dagar, introducerad 1582.",
   "cal_islamic_explanation": "Månkalendern, 12 månader, 354-355 dagar, börjar med Muhammeds migration till Medina (622 e.Kr.).",
   "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykel för djur. Används för traditionella östasiatiska festivaler.",
   "cal_persian_explanation": "Solkalendern, 365-366 dagar, börjar vid vårdagjämningen (Nowruz).",
