--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "Іврит",
   "cal_balinese": "Балійська",
   "cal_creationist": "Креаціоніст",
-  "cal_gregorian_explanation": "Сонячний календар, 12 місяців, 365-366 днів, запроваджений Папою Григорієм XIII у 1582 році.",
+  "cal_gregorian_explanation": "Сонячний календар, 12 місяців, 365-366 днів, запроваджений у 1582 році.",
   "cal_islamic_explanation": "Місячний календар, 12 місяців, 354-355 днів, починається з переселення Мухаммеда до Медіни (622 рік н. е.).",
   "cal_chinese_explanation": "Місячно-сонячний календар поєднує місячні місяці, сонячний рік, 12-річний зодіакальний цикл тварин. Використовується для традиційних східноазіатських свят.",
   "cal_persian_explanation": "Сонячний календар, 365-366 днів, починається з весняного рівнодення (Навруза).",
