--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "hebreo",
   "cal_balinese": "balinés",
   "cal_creationist": "Creacionista",
-  "cal_gregorian_explanation": "Calendario solar, 12 meses, 365-366 días, introducido por el Papa Gregorio XIII en 1582.",
+  "cal_gregorian_explanation": "Calendario solar, 12 meses, 365-366 días, introducido en 1582.",
   "cal_islamic_explanation": "Calendario lunar, 12 meses, 354-355 días, comienza con la migración de Mahoma a Medina (622 d.C.).",
   "cal_chinese_explanation": "Calendario lunisolar que combina los meses lunares, el año solar y el ciclo animal del zodíaco de 12 años. Se utiliza para festivales tradicionales del este asiático.",
   "cal_persian_explanation": "El calendario solar, de 365-366 días, comienza en el equinoccio de primavera (Nowruz).",
