--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -323,7 +323,7 @@
   "cal_hebrew": "यहूदी",
   "cal_balinese": "बाली",
   "cal_creationist": "निर्माणवादी",
-  "cal_gregorian_explanation": "सौर कैलेंडर, जिसमें 12 महीने और 365-366 दिन होते हैं, को पोप ग्रेगरी XIII ने 1582 में शुरू किया था।",
+  "cal_gregorian_explanation": "सौर कैलेंडर, 12 महीने, 365-366 दिन, 1582 में शुरू किया गया।",
   "cal_islamic_explanation": "चंद्र कैलेंडर, जिसमें 12 महीने और 354-355 दिन होते हैं, की शुरुआत मुहम्मद के मदीना प्रवास (622 ईस्वी) से होती है।",
   "cal_chinese_explanation": "चंद्र-सौर कैलेंडर, चंद्र महीनों, सौर वर्ष और 12 वर्षीय राशि चक्र पशु चक्र का संयोजन है। इसका उपयोग पारंपरिक पूर्वी एशियाई त्योहारों में किया जाता है।",
   "cal_persian_explanation": "सौर कैलेंडर, जिसमें 365-366 दिन होते हैं, वसंत विषुव (नवरोज) से शुरू होता है।",
