--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -343,7 +343,7 @@
   "settings_parameters": "Parámetros",
   "controls_mouse": "Ratón",
   "controls_mouse_drag": "Arrastrar",
-  "controls_mouse_drag_pan": "Línea de tiempo de Pan",
+  "controls_mouse_drag_pan": "Cacerola",
   "controls_mouse_wheel": "Rueda",
   "controls_mouse_wheel_zoom_at_cursor": "Zoom en el cursor",
   "controls_mouse_enable_inertia": "Impulso después del arrastre",
