--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -343,24 +343,24 @@
   "settings_parameters": "Paramètres",
   "controls_mouse": "Souris",
   "controls_mouse_drag": "Traîner",
-  "controls_mouse_drag_pan": "Chronologie panoramique",
-  "controls_mouse_wheel": "Roue",
-  "controls_mouse_wheel_zoom_at_cursor": "Zoomer au niveau du curseur",
-  "controls_mouse_enable_inertia": "L'élan après la traînée",
+  "controls_mouse_drag_pan": "Pan",
+  "controls_mouse_wheel": "Roue de la souris",
+  "controls_mouse_wheel_zoom_at_cursor": "Zoomer au curseur",
+  "controls_mouse_enable_inertia": "Elan",
   "controls_keyboard": "Clavier",
-  "controls_keyboard_pan_left_right": "Poêle",
-  "controls_keyboard_key_shift": "Changement",
-  "controls_keyboard_fast_pan": "poêle rapide",
+  "controls_keyboard_pan_left_right": "Pan",
+  "controls_keyboard_key_shift": "Maj.",
+  "controls_keyboard_fast_pan": "Pan rapide",
   "controls_keyboard_zoom_in_out": "Zoom",
-  "controls_keyboard_key_home": "Maison",
-  "controls_keyboard_jump_to_present": "Passer à maintenant",
-  "controls_keyboard_reset_zoom": "Réinitialiser le zoom",
-  "controls_keyboard_invert_arrows": "Inverser la poêle",
+  "controls_keyboard_key_home": "Home",
+  "controls_keyboard_jump_to_present": "Aller à Aujourd'hui",
+  "controls_keyboard_reset_zoom": "Réinitialiser zoom",
+  "controls_keyboard_invert_arrows": "Inverser Pan",
   "controls_touch": "Touche",
   "controls_touch_drag": "Traîner",
-  "controls_touch_drag_pan": "Poêle",
+  "controls_touch_drag_pan": "Pan",
   "controls_touch_pinch": "Pincer",
   "controls_touch_pinch_zoom": "Zoom avant/arrière",
   "controls_touch_zoom_sensitivity": "Pincer",
-  "controls_touch_enable_pinch_zoom": "Activer le zoom par pincement"
+  "controls_touch_enable_pinch_zoom": "Pincer-zoomer"
 }
