--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -343,7 +343,7 @@
   "settings_parameters": "पैरामीटर",
   "controls_mouse": "चूहा",
   "controls_mouse_drag": "खींचना",
-  "controls_mouse_drag_pan": "पैन टाइमलाइन",
+  "controls_mouse_drag_pan": "कड़ाही",
   "controls_mouse_wheel": "पहिया",
   "controls_mouse_wheel_zoom_at_cursor": "कर्सर पर ज़ूम करें",
   "controls_mouse_enable_inertia": "घर्षण के बाद संवेग",
