--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -343,7 +343,7 @@
   "settings_parameters": "Parametri",
   "controls_mouse": "Topo",
   "controls_mouse_drag": "Lagna",
-  "controls_mouse_drag_pan": "Panoramica della cronologia",
+  "controls_mouse_drag_pan": "Padella",
   "controls_mouse_wheel": "Ruota",
   "controls_mouse_wheel_zoom_at_cursor": "Zoom sul cursore",
   "controls_mouse_enable_inertia": "Momento dopo il trascinamento",
