--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -343,7 +343,7 @@
   "settings_parameters": "Parametry",
   "controls_mouse": "Mysz",
   "controls_mouse_drag": "Ciągnąć",
-  "controls_mouse_drag_pan": "Przesuń oś czasu",
+  "controls_mouse_drag_pan": "Patelnia",
   "controls_mouse_wheel": "Koło",
   "controls_mouse_wheel_zoom_at_cursor": "Powiększ kursor",
   "controls_mouse_enable_inertia": "Pęd po przeciągnięciu",
