--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -343,7 +343,7 @@
   "settings_parameters": "Параметры",
   "controls_mouse": "Мышь",
   "controls_mouse_drag": "Тащить",
-  "controls_mouse_drag_pan": "Хронология Пана",
+  "controls_mouse_drag_pan": "Кастрюля",
   "controls_mouse_wheel": "Колесо",
   "controls_mouse_wheel_zoom_at_cursor": "Увеличьте масштаб при наведении курсора",
   "controls_mouse_enable_inertia": "Импульс после торможения",
