--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -343,7 +343,7 @@
   "settings_parameters": "Параметри",
   "controls_mouse": "Миша",
   "controls_mouse_drag": "Перетягування",
-  "controls_mouse_drag_pan": "Панорамування часової шкали",
+  "controls_mouse_drag_pan": "Пательня",
   "controls_mouse_wheel": "Колесо",
   "controls_mouse_wheel_zoom_at_cursor": "Масштабування курсора",
   "controls_mouse_enable_inertia": "Імпульс після опору",
