--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -343,7 +343,7 @@
   "settings_parameters": "参数",
   "controls_mouse": "老鼠",
   "controls_mouse_drag": "拖",
-  "controls_mouse_drag_pan": "泛时间线",
+  "controls_mouse_drag_pan": "平底锅",
   "controls_mouse_wheel": "车轮",
   "controls_mouse_wheel_zoom_at_cursor": "光标处放大",
   "controls_mouse_enable_inertia": "阻力后的动量",
