--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Woche",
   "time_region_week_starts_monday": "Montag",
   "time_region_week_starts_sunday": "Sonntag",
-  "cal_name": "Kalender:",
+  "cal_name": "Kalender",
   "cal_availability_yes": "Verfügbar",
   "cal_availability_no": "Noch nicht fertig (wir brauchen Hilfe... Beitrags-Website hier)",
   "cal_other": "Kalender",
