--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Monday",
   "time_region_week_starts_sunday": "Sunday",
-  "cal_name": "Calendar:",
+  "cal_name": "Calendar",
   "cal_availability_yes": "Available",
   "cal_availability_no": "Not ready yet (we need help... contribution-website-here)",
   "cal_other": "Calendars",
