--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Semana",
   "time_region_week_starts_monday": "Lunes",
   "time_region_week_starts_sunday": "Domingo",
-  "cal_name": "Calendario:",
+  "cal_name": "Calendario",
   "cal_availability_yes": "Disponible",
   "cal_availability_no": "Aún no estamos listos (necesitamos ayuda... contribución-sitio-web-aquí)",
   "cal_other": "Calendarios",
