--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Semaine",
   "time_region_week_starts_monday": "Lundi",
   "time_region_week_starts_sunday": "Dimanche",
-  "cal_name": "Calendrier:",
+  "cal_name": "Calendrier",
   "cal_availability_yes": "Disponible",
   "cal_availability_no": "Pas encore prêt (nous avons besoin d'aide... site web de contribution ici)",
   "cal_other": "Calendriers",
