--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "सप्ताह",
   "time_region_week_starts_monday": "सोमवार",
   "time_region_week_starts_sunday": "रविवार",
-  "cal_name": "कैलेंडर:",
+  "cal_name": "कैलेंडर",
   "cal_availability_yes": "उपलब्ध",
   "cal_availability_no": "अभी तैयार नहीं है (हमें मदद की ज़रूरत है... योगदान वेबसाइट यहाँ देखें)",
   "cal_other": "CALENDARS",
