--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Settimana",
   "time_region_week_starts_monday": "Lunedi",
   "time_region_week_starts_sunday": "Domenica",
-  "cal_name": "Calendario:",
+  "cal_name": "Calendario",
   "cal_availability_yes": "Disponibile",
   "cal_availability_no": "Non ancora pronto (abbiamo bisogno di aiuto... contributo-sito-web-qui)",
   "cal_other": "Calendari",
