--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "週",
   "time_region_week_starts_monday": "月曜日",
   "time_region_week_starts_sunday": "日曜日",
-  "cal_name": "カレンダー：",
+  "cal_name": "カレンダー",
   "cal_availability_yes": "利用可能",
   "cal_availability_no": "まだ準備ができていません (支援が必要です... 貢献ウェブサイトはこちら)",
   "cal_other": "カレンダー",
