--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Maandag",
   "time_region_week_starts_sunday": "Zondag",
-  "cal_name": "Kalender:",
+  "cal_name": "Kalender",
   "cal_availability_yes": "Beschikbaar",
   "cal_availability_no": "Nog niet klaar (we hebben hulp nodig... bijdrage-website-hier)",
   "cal_other": "Kalenders",
