--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Tydzień",
   "time_region_week_starts_monday": "Poniedziałek",
   "time_region_week_starts_sunday": "Niedziela",
-  "cal_name": "Kalendarz:",
+  "cal_name": "Kalendarz",
   "cal_availability_yes": "Dostępny",
   "cal_availability_no": "Jeszcze nie gotowe (potrzebujemy pomocy... wkład-strona-tutaj)",
   "cal_other": "Kalendarze",
