--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Неделя",
   "time_region_week_starts_monday": "Понедельник",
   "time_region_week_starts_sunday": "Воскресенье",
-  "cal_name": "Календарь:",
+  "cal_name": "Календарь",
   "cal_availability_yes": "Доступный",
   "cal_availability_no": "Пока не готово (нам нужна помощь... сайт для пожертвований здесь)",
   "cal_other": "Календари",
