--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Vecka",
   "time_region_week_starts_monday": "måndag",
   "time_region_week_starts_sunday": "söndag",
-  "cal_name": "Kalender:",
+  "cal_name": "Kalender",
   "cal_availability_yes": "Tillgänglig",
   "cal_availability_no": "Inte klar än (vi behöver hjälp... bidragswebbplats-här)",
   "cal_other": "Kalendrar",
