--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "Тиждень",
   "time_region_week_starts_monday": "Понеділок",
   "time_region_week_starts_sunday": "Неділя",
-  "cal_name": "Календар:",
+  "cal_name": "Календар",
   "cal_availability_yes": "Доступно",
   "cal_availability_no": "Ще не готові (нам потрібна допомога... веб-сайт для внесків тут)",
   "cal_other": "Календарі",
