--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -109,7 +109,7 @@
   "time_region_week_starts": "星期",
   "time_region_week_starts_monday": "周一",
   "time_region_week_starts_sunday": "星期日",
-  "cal_name": "日历：",
+  "cal_name": "日历",
   "cal_availability_yes": "可用的",
   "cal_availability_no": "尚未准备就绪（我们需要帮助……请访问此处提交贡献网站）",
   "cal_other": "日历",
